# NetGraphy

./: .gitignore  Makefile  README.md  package-lock.json
.claude/: claude.md  settings.json
apps/api/: pyproject.toml
apps/api/netgraphy_api/: __init__.py  app.py  config.py  exceptions.py
apps/api/netgraphy_api/dependencies/: __init__.py
apps/api/netgraphy_api/middleware/: request_id.py
apps/api/netgraphy_api/routers/: architecture.py  audit.py  auth.py  chat.py  dev.py  docs.py  edges.py  generated.py  git_sources.py  health.py  iac.py  ingestion.py  jobs.py  nodes.py  parsers.py  queries.py  reports.py  schema.py
apps/api/netgraphy_api/services/: edge_service.py  node_service.py  query_service.py  schema_service.py
apps/web/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/worker/: main.py
content/queries/: topology_queries.yaml
content/seed/: contact_types.yaml  seed_data.py
docs/: index.md
docs/ai-assistant/: documentation-aware-chat.md  external-agent-access.md  object-aware-chat.md  overview.md  tool-usage.md  user-equivalent-permissions.md
docs/architecture/: 01-executive-summary.md  02-backend-architecture.md  03-frontend-architecture.md  04-schema-and-query.md  05-ingestion-jobs-sync-security.md  06-roadmap-api-ux.md
docs/core-concepts/: attributes.md  canonical-schema-model.md  cypher-builder.md  edges.md  generated-capabilities.md  generated-tools.md  nodes.md  observability.md  policies-and-boundaries.md  validation.md
infra/docker/: api.Dockerfile  (+1 more)
scripts/: seed.py  seed_fabric_links.py  seed_servers.py  seed_wan.py
(+199 files in other folders)
