[project]
name = "netgraphy-api"
version = "0.1.0"
description = "NetGraphy API Server — Graph-native network source of truth"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "neo4j>=5.17.0",
    "redis>=5.0.0",
    "nats-py>=2.7.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "jsonschema>=4.21.0",
    "textfsm>=1.1.3",
    "jinja2>=3.1.3",
    "celery[redis]>=5.3.6",
    "minio>=7.2.3",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-otlp-proto-http>=1.23.0",
    "openinference-instrumentation>=0.1.12",
    "openinference-semantic-conventions>=0.1.9",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-cloud-aiplatform>=1.40.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "testcontainers[neo4j]>=3.7.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../../tests"]
